# tiralabra

./: .gitignore  README.md
Dokumentaatio/: Käyttöohje.md  Testausdokumentti.md  Toteutusraportti  Toteutusraportti.md  Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md
Dokumentaatio/htmlcov/: d_145eef247bfb46b6_trie_py.html  d_145eef247bfb46b6_trie_test_py.html  index.html  status.json
koodi/: .coveragerc  .pylintrc  coverage.xml  pyproject.toml
koodi/src/: main.py  markov.py  midi_parser.py  pyproject.toml  trie.py  trie_test.py
koodi/src/new_tunes/: Markovin melodia #1  Markovin melodia #2  Markovin melodia #3
koodi/src/training data/midi/: Lemmennosto.mid  Matalii ja mustii.mid  Pihi neito.mid  Riena.mid  Ruhverikko.mid  Tantsu.mid
src/: main.py
