[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Paul <paul.m.sainio@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^7.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.6"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
